--- a/docs/style.css
+++ b/docs/style.css
@@ -2,12 +2,124 @@ html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}bo
 
 * { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
 
+/* Some general setup for the page */
+html {
+    font-size: 20px;
+    font-size: 125%;
+    scroll-behavior: smooth;
+}
+
+body {
+    font-size: 1.1rem;
+    font-family: 'Zilla Slab', serif;
+    background-color: rgb(51, 36, 51);
+}
+
+button {
+    font-family: 'Zilla Slab', serif;
+}
+
+a {
+    color: blue;
+}
+
+a:hover, a:focus {
+    color: green;
+}
+
+/* Headers */
+h1,h2,h3 {
+    font-family: 'Cousine', monospace;
+}
+
+/* The wrapper */
 .wrapper {
-    width: 80%;
+    width: 90%;
     max-width: 1000px;
     margin: 0 auto;
 }
 
+/* Header section */
+header {
+    background: rgb(251, 255, 251);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 2rem 0;
+    margin-bottom: 2rem;
+    text-align: center;
+}
+
+h1 {
+    margin: 0 auto;
+    max-width: 800px;
+}
+
+nav ul {
+    display: inline-block;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+nav a {
+    display: inline-block;
+    padding: 0.5rem;
+    margin: 0.5rem;
+    border: 2px solid rgb(51, 36, 51);
+    background: rgb(230, 255, 230);
+    color: black;
+    font-weight: bold;
+    text-decoration: none;
+    transition: 0.1s;
+}
+
+nav a:hover, nav a:focus {
+    color:rgb(230, 255, 230);
+    background: rgb(51, 36, 51);
+}
+
+/* Main section */
+section {
+    background: rgb(251, 255, 251);
+    padding: 2rem 0;
+    margin: 2rem 0;
+}
+
+p,h2,h3 {
+    margin: 2rem;
+}
+
+section ul {
+    margin: 2rem;
+}
+
+button {
+    margin: 0 2rem;
+}
+
+p:first-child,h2:first-child {
+    margin-top: 0;
+}
+
+p:last-child {
+    margin-bottom: 0;
+}
+
+pre {
+    white-space: pre-wrap;
+    font-size: 0.8rem;
+    margin: 0;
+}
+
+/* Footer */
+footer {
+    background: rgb(251, 255, 251);
+    padding: 2rem 0;
+    text-align: center;
+}
+
+/* Below is for the tutorial. */
 /* You can style the tiles with pumpkin-tile! You can also target pumpkin-display and pumpkin-container */
 .pumpkin-tile {
     font-family: monospace;
@@ -16,7 +128,6 @@ html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}bo
 /* The display will fit the container you put it in; make sure it has a size! */
 .pumpkin-container {
     height: 400px;
-    border: 2px solid gray;
 }
 
 /* Just some styles that you think look cool */
@@ -39,8 +150,19 @@ html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}bo
     font-family: sans-serif;
 }
 
+.pathMarker {
+    color: red;
+}
+
 .pumpkin-container.colorDisplay {
     background: linear-gradient(#FF00FF, #FFFF00);
     color: darkslateblue;
     font-weight: bold;
+}
+
+@media(max-width:900px) {
+    .wrapper {
+        width: auto;
+        margin: 0 1rem;
+    }
 }
