--- a/docs/style.css
+++ b/docs/style.css
@@ -46,8 +46,9 @@ header {
     flex-direction: column;
     justify-content: center;
     padding: 2rem 0;
-    margin-bottom: 2rem;
+    margin: 2rem 0;
     text-align: center;
+    min-height: calc(100vh - 4rem);
 }
 
 h1 {
@@ -106,10 +107,16 @@ p:last-child {
     margin-bottom: 0;
 }
 
+code.hljs {
+    padding: 0 1rem;
+    background: #232323;
+}
+
 pre {
     white-space: pre-wrap;
     font-size: 0.8rem;
     margin: 0;
+    background-color: #232323;
 }
 
 /* Footer */
